--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#880000</color>
     <color name="colorPrimaryDark">#b71c1c</color>
     <color name="colorAccent">#880000</color>
-    <color name="colorBotin">#d50000</color>
+    <color name="colorBotin">#D50000</color>
     <color name="colorFindo">#bdbdbd</color>
 </resources>
