--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,180 +1,207 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorFindo"
-    tools:context="mx.martinezfernando.reyesjose.cecyt9.edu.ipn.memorama.MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/colorFindo">
 
-    <TableRow
-        android:id="@+id/row1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_weight="0.8"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+    <TableLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
-        <ImageView
-            android:id="@+id/b1"
-            android:layout_width="90dp"
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_marginBottom="7dp"
+            android:layout_weight="1"
+            android:gravity="center">
 
-        <ImageView
-            android:id="@+id/b2"
-            android:layout_width="90dp"
+            <ImageButton
+                android:id="@+id/b1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent"
+                tools:layout_editor_absoluteX="29dp"
+                tools:layout_editor_absoluteY="39dp" />
+
+            <ImageButton
+                android:id="@+id/b2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b4"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_marginBottom="7dp"
+            android:layout_weight="1">
 
-        <ImageView
-            android:id="@+id/b3"
-            android:layout_width="90dp"
+            <ImageButton
+                android:id="@+id/b5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b6"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b7"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b8"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_marginBottom="7dp"
+            android:layout_weight="1" >
 
-        <ImageView
-            android:id="@+id/b4"
-            android:layout_width="90dp"
+            <ImageButton
+                android:id="@+id/b9"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b10"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b11"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b12"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_marginBottom="7dp"
+            android:layout_weight="1" >
 
-    </TableRow>
+            <ImageButton
+                android:id="@+id/b13"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
 
-    <TableRow
-        android:id="@+id/row2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="0.8">
+            <ImageButton
+                android:id="@+id/b14"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
 
-        <ImageView
-            android:id="@+id/b5"
-            android:layout_width="90dp"
+            <ImageButton
+                android:id="@+id/b15"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+
+            <ImageButton
+                android:id="@+id/b16"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@color/colorAccent" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            android:layout_weight="0.5"
+            android:gravity="right|center_vertical">
 
-        <ImageView
-            android:id="@+id/b6"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            <TextView
+                android:id="@+id/timer"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:gravity="center"
+                android:text="00:00"
+                android:textSize="24sp" />
 
-        <ImageView
-            android:id="@+id/b7"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
+            <Button
+                android:id="@+id/back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="14dp"
+                android:layout_weight="0.5"
+                android:backgroundTint="@color/colorBotin"
+                android:onClick="regreso"
+                android:text="Regresar"
+                android:textColor="@android:color/background_light" />
+        </TableRow>
+    </TableLayout>
 
-        <ImageView
-            android:id="@+id/b8"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@color/colorAccent" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/row3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-
-        android:layout_weight="0.8">
-
-        <ImageView
-            android:id="@+id/b9"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
-
-        <ImageView
-            android:id="@+id/b10"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
-
-        <ImageView
-            android:id="@+id/b11"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
-
-        <ImageView
-            android:id="@+id/b12"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@color/colorAccent" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/row4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.8" >
-
-        <ImageView
-            android:id="@+id/b13"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
-
-        <ImageView
-            android:id="@+id/b14"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
-
-        <ImageView
-            android:id="@+id/b15"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="7dp"
-            app:srcCompat="@color/colorAccent" />
-
-        <ImageView
-            android:id="@+id/b16"
-            android:layout_width="90dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@color/colorAccent" />
-    </TableRow>
-
-    <TableRow
-        android:id="@+id/row5"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.2"
-        android:gravity="center_vertical|end">
-
-        <TextView
-            android:id="@+id/timer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            android:text="00:00"
-            android:textColor="@android:color/background_dark" />
-
-        <Button
-            android:id="@+id/back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorBotin"
-            android:text="Regresar"
-            android:textColor="@android:color/background_light" />
-
-    </TableRow>
-</TableLayout>
+</android.support.constraint.ConstraintLayout>
