--- a/app/src/main/res/layout/activity_puntajes.xml
+++ b/app/src/main/res/layout/activity_puntajes.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorFindo"
-    tools:context=".Menu">
+    tools:context=".Puntajes">
 
     <TableLayout
         android:layout_width="0dp"
@@ -21,49 +21,55 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.7"
-            android:gravity="center">
+            android:layout_height="match_parent"
+            android:layout_weight="0.4"
+            android:gravity="center|center_vertical">
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="GIEB Projects"
+                android:gravity="center"
+                android:text="Puntajes"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                 android:textSize="35sp" />
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
 
-            <Button
-                android:id="@+id/juego"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@color/colorBotin"
-                android:onClick="jugar"
-                android:text="!!Jugar¡¡"
-                android:textColor="@android:color/background_light" />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:orientation="vertical" />
+            </ScrollView>
+
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5" >
+            android:layout_height="match_parent"
+            android:layout_weight="0.2"
+            android:gravity="right|center_vertical">
 
             <Button
-                android:id="@+id/puntajes"
-                android:layout_width="0dp"
+                android:id="@+id/back2"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginLeft="14dp"
                 android:backgroundTint="@color/colorBotin"
-                android:onClick="puntaje"
-                android:text="Puntajes"
+                android:onClick="regreso"
+                android:text="Regresar"
                 android:textColor="@android:color/background_light" />
         </TableRow>
+
     </TableLayout>
+
 </android.support.constraint.ConstraintLayout>
