--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,15 @@
     tools:context=".MainActivity"
     android:background="@color/colorFindo">
 
-    <TableLayout
+    <android.support.v7.widget.GridLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        app:columnCount="4"
+        app:rowCount="5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -21,166 +23,170 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="7dp"
-            android:layout_weight="1"
-            android:gravity="center">
 
-            <ImageButton
-                android:id="@+id/b1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="7dp"
-                android:layout_weight="1"
-                android:background="@color/colorAccent"
-                tools:layout_editor_absoluteX="29dp"
-                tools:layout_editor_absoluteY="39dp" />
+        <ImageButton
+            android:id="@+id/b1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="20dp"
+            android:background="@color/colorAccent"
+            app:layout_column="0"
+            app:layout_row="0"
+            tools:layout_editor_absoluteX="29dp"
+            tools:layout_editor_absoluteY="39dp" />
 
             <ImageButton
                 android:id="@+id/b2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
-                android:background="@color/colorAccent" />
+                android:background="@color/colorAccent"
+                app:layout_column="1"
+                app:layout_row="0" />
 
             <ImageButton
                 android:id="@+id/b3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
+                app:layout_row="0"
+                app:layout_column="2"
                 android:background="@color/colorAccent" />
 
             <ImageButton
                 android:id="@+id/b4"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
+                app:layout_row="0"
+                app:layout_column="3"
                 android:background="@color/colorAccent" />
-        </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="7dp"
-            android:layout_weight="1">
 
-            <ImageButton
-                android:id="@+id/b5"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="7dp"
-                android:layout_weight="1"
-                android:background="@color/colorAccent" />
+        <ImageButton
+            android:id="@+id/b5"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            app:layout_column="0"
+            app:layout_row="1" />
 
             <ImageButton
                 android:id="@+id/b6"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
+                app:layout_row="1"
+                app:layout_column="1"
                 android:background="@color/colorAccent" />
 
             <ImageButton
                 android:id="@+id/b7"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
+                app:layout_row="1"
+                app:layout_column="2"
                 android:background="@color/colorAccent" />
 
             <ImageButton
                 android:id="@+id/b8"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
+                app:layout_row="1"
+                app:layout_column="3"
                 android:background="@color/colorAccent" />
-        </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="7dp"
-            android:layout_weight="1" >
 
-            <ImageButton
-                android:id="@+id/b9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="7dp"
-                android:layout_weight="1"
-                android:background="@color/colorAccent" />
+        <ImageButton
+            android:id="@+id/b9"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            app:layout_column="0"
+            app:layout_row="2" />
 
             <ImageButton
                 android:id="@+id/b10"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
+                app:layout_row="2"
+                app:layout_column="1"
                 android:background="@color/colorAccent" />
 
             <ImageButton
                 android:id="@+id/b11"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
+                app:layout_row="2"
+                app:layout_column="2"
                 android:background="@color/colorAccent" />
 
             <ImageButton
                 android:id="@+id/b12"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
+                app:layout_row="2"
+                app:layout_column="3"
                 android:background="@color/colorAccent" />
-        </TableRow>
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="7dp"
-            android:layout_weight="1" >
 
-            <ImageButton
-                android:id="@+id/b13"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginRight="7dp"
-                android:layout_weight="1"
-                android:background="@color/colorAccent" />
+        <ImageButton
+            android:id="@+id/b13"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginBottom="50dp"
+            android:layout_weight="1"
+            android:background="@color/colorAccent"
+            app:layout_column="0"
+            app:layout_row="3" />
 
             <ImageButton
                 android:id="@+id/b14"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
+                app:layout_row="3"
+                app:layout_column="1"
                 android:background="@color/colorAccent" />
 
             <ImageButton
                 android:id="@+id/b15"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginRight="7dp"
                 android:layout_weight="1"
+                app:layout_row="3"
+                app:layout_column="2"
                 android:background="@color/colorAccent" />
 
             <ImageButton
                 android:id="@+id/b16"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
+                app:layout_row="3"
+                app:layout_column="3"
                 android:background="@color/colorAccent" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5"
-            android:gravity="right|center_vertical">
 
             <TextView
                 android:id="@+id/timer"
@@ -189,19 +195,22 @@
                 android:layout_weight="5"
                 android:gravity="center"
                 android:text="00:00"
+                app:layout_row="4"
+                app:layout_column="0"
                 android:textSize="24sp" />
 
-            <Button
-                android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="14dp"
-                android:layout_weight="0.5"
-                android:backgroundTint="@color/colorBotin"
-                android:onClick="regreso"
-                android:text="Regresar"
-                android:textColor="@android:color/background_light" />
-        </TableRow>
-    </TableLayout>
+        <Button
+            android:id="@+id/back"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:backgroundTint="@color/colorBotin"
+            android:onClick="regreso"
+            android:text="Atras"
+            android:textColor="@android:color/background_light"
+            app:layout_column="3"
+            app:layout_row="4" />
+
+    </android.support.v7.widget.GridLayout>
 
 </android.support.constraint.ConstraintLayout>
