--- a/app/src/main/res/layout/activity_puntajes.xml
+++ b/app/src/main/res/layout/activity_puntajes.xml
@@ -40,17 +40,11 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <ScrollView
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/datos"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:orientation="vertical" />
-            </ScrollView>
-
+                android:layout_weight="1" />
         </TableRow>
 
         <TableRow
