--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/colorFindo">
+    android:background="@color/colorFindo"
+    tools:context=".MainActivity">
 
     <android.support.v7.widget.GridLayout
         android:layout_width="0dp"
@@ -15,13 +15,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:columnCount="4"
-        app:rowCount="5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        app:rowCount="5">
 
 
         <ImageButton
@@ -206,14 +206,15 @@
 
         <TextView
             android:id="@+id/timer"
-            android:layout_width="70dp"
+            android:layout_width="162dp"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_weight="2"
             android:gravity="center"
             android:text="00:00"
-            app:layout_row="4"
-            app:layout_column="0"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            app:layout_column="1"
+            app:layout_columnSpan="2"
+            app:layout_row="4" />
 
         <Button
             android:id="@+id/back"
