--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -53,7 +53,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5" >
+            android:layout_weight="0.5">
 
             <Button
                 android:id="@+id/puntajes"
@@ -64,6 +64,22 @@
                 android:onClick="puntaje"
                 android:text="Puntajes"
                 android:textColor="@android:color/background_light" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:gravity="center_vertical|end">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/floatingActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:onClick="info"
+                app:backgroundTint="@color/colorBotin"
+                app:srcCompat="@android:drawable/ic_dialog_info" />
         </TableRow>
     </TableLayout>
 </android.support.constraint.ConstraintLayout>
