--- a/app/src/main/res/layout/activity_puntajes.xml
+++ b/app/src/main/res/layout/activity_puntajes.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Puntajes"
+                android:text="Mejores tiempos"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                 android:textSize="35sp" />
         </TableRow>
