--- a/app/src/main/res/layout/activity_puntajes.xml
+++ b/app/src/main/res/layout/activity_puntajes.xml
@@ -22,7 +22,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.4"
+            android:layout_weight="0.1"
             android:gravity="center|center_vertical">
 
             <TextView
@@ -38,19 +38,63 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="center_horizontal">
 
-            <ScrollView
+            <android.support.v7.widget.GridLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                app:columnCount="1"
+                app:rowCount="1">
 
-                <LinearLayout
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:orientation="vertical" />
-            </ScrollView>
+                    android:layout_height="match_parent"
+                    app:layout_row="0"
+                    app:layout_column="0">
 
+                    <TableLayout
+                        android:id="@+id/datos"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+
+                            <TextView
+                                android:id="@+id/textView9"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.5"
+                                android:gravity="center"
+                                android:text="Posición"
+                                android:textColor="@android:color/black"
+                                android:textSize="18sp" />
+
+                            <TextView
+                                android:id="@+id/textView8"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.5"
+                                android:gravity="center"
+                                android:text="Nombre"
+                                android:textColor="@android:color/black"
+                                android:textSize="18sp" />
+
+                            <TextView
+                                android:id="@+id/textView7"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="0.5"
+                                android:gravity="center"
+                                android:text="Tiempo"
+                                android:textColor="@android:color/black"
+                                android:textSize="18sp" />
+                        </TableRow>
+                    </TableLayout>
+                </ScrollView>
+            </android.support.v7.widget.GridLayout>
         </TableRow>
 
         <TableRow
@@ -64,6 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="14dp"
+                android:layout_weight="0"
                 android:backgroundTint="@color/colorBotin"
                 android:onClick="regreso"
                 android:text="Regresar"
