--- a/app/src/main/res/layout/registro_dialog.xml
+++ b/app/src/main/res/layout/registro_dialog.xml
@@ -24,12 +24,20 @@
         android:backgroundTint="@color/colorBotin"></View>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/nombre"
         android:layout_width="255dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/puntos"
+        android:layout_width="255dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textSize="24sp" />
 
 </LinearLayout>
